Pushing code to staging environment

--- a/DeployToAzure/wwwroot/index.html
+++ b/DeployToAzure/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title>Deploy to Azure using Github</title>
 </head>
 <body>
-    <h3>Implementing Blue Green Deployment - new version</h3>
+    <h3>Implementing Blue Green Deployment - added some new features</h3>
 </body>
 </html>
